--- a/flutter_ecommerce_app_dicoding/pubspec.yaml
+++ b/flutter_ecommerce_app_dicoding/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dropdown_formfield: ^0.1.3
   flutter_easyloading: ^3.0.0
   firebase_messaging: any
+  top_snackbar_flutter: ^1.0.0
 
 
 dev_dependencies:
