--- a/flutter_ecommerce_app_dicoding/android/app/src/main/AndroidManifest.xml
+++ b/flutter_ecommerce_app_dicoding/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_ecommerce_app">
+    <uses-permission android:name="android.permission.INTERNET" /> 
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+<uses-permission android:name="android.permission.REQUEST_COMPANION_USE_DATA_IN_BACKGROUND "/>
+
+
    <application
         android:label="flutter_ecommerce_app"
         android:icon="@mipmap/ic_launcher"
